--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,21 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <!-- Primary Color (for app bar, etc.) -->
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <!-- Monochrome Colors -->
+    <color name="lightGray">#D3D3D3</color>
+    <color name="darkGray">#A9A9A9</color>
+    <color name="gray">#808080</color>
 
-    <!-- Background and Text Colors -->
-    <color name="gray">#9E9E9E</color>
-
-    <!-- Text Color for Headers -->
-    <color name="textPrimary">#212121</color>
-    <color name="textSecondary">#757575</color>
-
-    <!-- Custom Color for Accent Buttons or Highlights -->
-    <color name="colorHighlight">#FF4081</color>
-
-    <!-- Divider Color -->
-    <color name="dividerColor">#BDBDBD</color>
+    <!-- Accent Colors -->
+    <color name="accentColor">#3F3F3F</color>
+    <color name="backgroundColor">#F5F5F5</color>
 </resources>
