--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,18 +1,23 @@
 <!-- res/layout/item_transaction.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp"
-    android:background="?android:attr/selectableItemBackground">
+    android:background="?android:attr/selectableItemBackground"
+    android:layout_gravity="center_vertical">
 
+    <!-- Transaction Details -->
     <TextView
         android:id="@+id/transactionDetails"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Category - Amount"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:textColor="@color/darkGray"
+        android:fontFamily="sans-serif-medium" />
 
     <ImageButton
         android:id="@+id/buttonDelete"
@@ -21,7 +26,8 @@
         android:src="@drawable/ic_delete"
         android:contentDescription="Delete Button"
         android:layout_marginStart="8dp"
-        android:background="?android:attr/selectableItemBackground"/>
+        android:background="?android:attr/selectableItemBackground"
+        app:tint="@color/mediumGray" />
 
     <ImageButton
         android:id="@+id/buttonUpdate"
@@ -30,5 +36,6 @@
         android:src="@drawable/ic_edit"
         android:contentDescription="Edit Button"
         android:layout_marginStart="8dp"
-        android:background="?android:attr/selectableItemBackground"/>
+        android:background="?android:attr/selectableItemBackground"
+        app:tint="@color/mediumGray" />
 </LinearLayout>
