--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,11 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- Monochrome Colors -->
+    <color name="gray">#808080</color>
     <color name="lightGray">#D3D3D3</color>
     <color name="darkGray">#A9A9A9</color>
-    <color name="gray">#808080</color>
+    <color name="mediumGray">#757575</color>
+
 
     <!-- Accent Colors -->
     <color name="accentColor">#3F3F3F</color>
